--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Montserrat:wght@500;600;800&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
-        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Montserrat:wght@500;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-</head>
-
-<body>
+  <body>
     <header class="header">
-        <div class="container">
-            <a href="#" class="header-logo">MNTN</a>
-            <ul class="header-list">
-                <li class="header-item"><a href="#" class="header-link">Equipment</a></li>
-                <li class="header-item"><a href="#" class="header-link">About us</a></li>
-                <li class="header-item"><a href="#" class="header-link">Blog</a></li>
-            </ul>
-            <a href="#" class="header-account">Account</a>
-        </div>
+      <div class="container">
+        <a href="#" class="header-logo">MNTN</a>
+        <ul class="header-list">
+          <li class="header-item">
+            <a href="#" class="header-link">Equipment</a>
+          </li>
+          <li class="header-item">
+            <a href="#" class="header-link">About us</a>
+          </li>
+          <li class="header-item"><a href="#" class="header-link">Blog</a></li>
+        </ul>
+        <a href="#" class="header-account">Account</a>
+      </div>
     </header>
-    <main class="center"></main>
+    <main class="main">
+      <section class="hero">
+        <p class="hero-suptitle">A Hiking guide</p>
+        <h1 class="hero-title">Be prepared for the Mountains and beyond!</h1>
+        <p class="hero-text">scroll down</p>
+      </section>
+    </main>
     <footer class="footer"></footer>
-
-</body>
-
+  </body>
 </html>
