--- a/index.html
+++ b/index.html
@@ -36,10 +36,50 @@
     <section class="hero">
       <div class="container">
         <div class="hero-box">
-          <p class="hero-suptitle">A Hiking guide</p>
+          <p class="hero-suptitle line">A Hiking guide</p>
           <h1 class="hero-title">Be prepared for the Mountains and beyond!</h1>
           <p class="hero-text">scroll down</p>
         </div>
+      </div>
+    </section>
+    <section class="articlas">
+      <div class="container">
+        <ul class="articlas-list">
+          <li class="articlas-item">
+            <div class="articlas-box">
+              <h3 class="articlas-get line">GEt Started</h3>
+              <h2 class="articlas-title">What level of hiker are you? </h2>
+              <p class="articlas-text">Determining what level of hiker you are can be an important tool when planning future hikes. This hiking level guide
+              will help you plan hikes according to different hike ratings set by various websites like All Trails and Modern Hiker.
+              What type of hiker are you – novice, moderate, advanced moderate, expert, or expert backpacker?</p>
+              <a href="./index.html" class="articlas-more">read more</a>
+            </div>
+            <img src="./images/Mountains.jpg" alt="" class="articlas-img">
+          </li>
+          <li class="articlas-item">
+            <div class="articlas-box">
+              <h3 class="articlas-get line">Hiking Essentials</h3>
+              <h2 class="articlas-title">Picking the right Hiking Gear!</h2>
+              <p class="articlas-text">The nice thing about beginning hiking is that you don’t really need any special gear, you can probably get away with
+              things you already have.
+              Let’s start with clothing. A typical mistake hiking beginners make is wearing jeans and regular clothes, which will get
+              heavy and chafe wif they get sweaty or wet.</p>
+              <a href="./index.html" class="articlas-more">read more</a>
+            </div>
+            <img src="./images/Mountains-two.jpg" alt="" class="articlas-img">
+          </li>
+          <li class="articlas-item">
+            <div class="articlas-box">
+              <h3 class="articlas-get line">where you go is the key</h3>
+              <h2 class="articlas-title">Understand Your Map & Timing</h2>
+              <p class="articlas-text">To start, print out the hiking guide and map. If it’s raining, throw them in a Zip-Lock bag. Read over the guide, study
+              the map, and have a good idea of what to expect. I like to know what my next landmark is as I hike. For example, I’ll
+              read the guide and know that say, in a mile, I make a right turn at the junction..</p>
+              <a href="./index.html" class="articlas-more ">read more</a>
+            </div>
+            <img src="./images/time.jpg" alt="" class="articlas-img ">
+          </li>
+        </ul>
       </div>
     </section>
   </main>
