--- a/index.html
+++ b/index.html
@@ -83,7 +83,77 @@
       </div>
     </section>
   </main>
-  <footer class="footer"></footer>
+  <footer class="footer">
+    <div class="container footer-box">
+      <div class="footer-box2">
+          <h2 class="footer-title">
+            MNTN
+          </h2>
+          <p class="footer-text">
+            Get out there & discover your next slope, mountain & destination!
+          </p>
+          <p class="footer-discription">
+            Copyright 2023 MNTN, Inc. Terms & Privacy
+          </p>
+      </div>
+      <ul class="footer-list">
+        <li class="footer-item">
+          <h2 class="footer-subtitle">
+            More on The Blog
+          </h2>
+          <ul class="footer-sublist">
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                About MNTN
+              </a>
+            </li>
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                Contributors & Writers
+              </a>
+            </li>
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                Write For Us
+              </a>
+            </li>
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                Contact Us
+              </a>
+            </li>
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                Privacy Policy
+              </a>
+            </li>
+          </ul>
+        </li>
+        <li class="footer-item">
+          <h2 class="footer-subtitle">
+            More on MNTN
+          </h2>
+          <ul class="footer-sublist">
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                The Team
+              </a>
+            </li>
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                Jobs
+              </a>
+            </li>
+            <li class="footer-subitem">
+              <a href="" class="footer-link">
+                Press
+              </a>
+            </li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
